--- a/app/index.html
+++ b/app/index.html
@@ -8,14 +8,29 @@
         <meta charset="UTF-8">
     </head>
     <body>
-      <div class="container">
-        <div class="row">
-          <div id="side_menu" class="col-sm-3">
+      <div id="header"></div>
+      <div id="main"></div>
+
+      <script id="header_view" type="text/template">
+        <nav id="header" class="navbar navbar-default navbar-fixed-top">
+          <div class="container">
+            <div class="navbar-header">
+              <a href="#" class="navbar-brand" id="top_link">Backbone Moarionette Sample</a>
+            </div>
           </div>
-          <div id="main" class="col-sm-9">
+        </nav>
+      </script>
+
+      <script id="main_view" type="text/template">
+        <div class="container">
+          <div class="row">
+            <div id="side_menu" class="col-sm-3">
+            </div>
+            <div id="main_content" class="col-sm-9">
+            </div>
           </div>
         </div>
-      </div>
+      </script>
 
       <script id="index_user_view" type="text/template">
         <div class="panel panel-info">
