表示しているユーザの背景色が変わるようにした(コードは修正するかも)

--- a/app/index.html
+++ b/app/index.html
@@ -24,10 +24,8 @@
       <script id="main_view" type="text/template">
         <div class="container">
           <div class="row">
-            <div id="side_menu" class="col-sm-3">
-            </div>
-            <div id="main_content" class="col-sm-9">
-            </div>
+            <div id="side_menu" class="col-sm-3"></div>
+            <div id="main_content" class="col-sm-9"></div>
           </div>
         </div>
       </script>
